--- a/Example/SKInkAnimator/Base.lproj/Main.storyboard
+++ b/Example/SKInkAnimator/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +21,32 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="mTT-jt-yNy">
+                                <rect key="frame" x="16" y="555" width="343" height="29"/>
+                                <segments>
+                                    <segment title="rabbit"/>
+                                    <segment title="dog"/>
+                                    <segment title="dinosaur"/>
+                                    <segment title="dragon"/>
+                                </segments>
+                                <color key="tintColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="didSelecSkin:" destination="vXZ-lx-hvc" eventType="valueChanged" id="1vl-VK-VzZ"/>
+                                </connections>
+                            </segmentedControl>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="mTT-jt-yNy" secondAttribute="bottom" constant="84" id="4mL-eN-AFX"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="mTT-jt-yNy" secondAttribute="leading" id="8cm-Pn-eU8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mTT-jt-yNy" secondAttribute="trailing" id="NGn-HA-q3x"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
